Fixed uneccessary whitespaces when creating a comment

--- a/app/assets/stylesheets/components/_input.scss
+++ b/app/assets/stylesheets/components/_input.scss
@@ -6,7 +6,7 @@
   color: $white;
   margin-bottom: $regular-margin;
   height: 40px;
-  padding: 0 $regular-padding;
+  padding: 10px $regular-padding;
   width: 100%;
   &:focus {
     background: $light-blue;
